test/tests/compiler/13_floating-point_numbers/valid/plx1_kw1_in_name.plx
pub fn main(none) i32 {
    f641: i32 = true
    
    return not f641
}
